// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basics fixtures/delete-expression.src 1`] = `
Object {
  "$id": 2,
  "block": Object {
    "range": Array [
      0,
      16,
    ],
    "type": "Program",
  },
  "childScopes": Array [
    Object {
      "$id": 1,
      "block": Object {
        "range": Array [
          0,
          16,
        ],
        "type": "Program",
      },
      "childScopes": Array [],
      "functionExpressionScope": false,
      "isStrict": true,
      "references": Array [
        Object {
          "$id": 0,
          "from": Object {
            "$ref": 1,
          },
          "identifier": Object {
            "name": "foo",
            "range": Array [
              7,
              10,
            ],
            "type": "Identifier",
          },
          "kind": "r",
          "resolved": null,
          "writeExpr": undefined,
        },
      ],
      "throughReferences": Array [
        Object {
          "$ref": 0,
        },
      ],
      "type": "module",
      "upperScope": Object {
        "$ref": 2,
      },
      "variableMap": Object {},
      "variableScope": Object {
        "$ref": 1,
      },
      "variables": Array [],
    },
  ],
  "functionExpressionScope": false,
  "isStrict": false,
  "references": Array [],
  "throughReferences": Array [
    Object {
      "$ref": 0,
    },
  ],
  "type": "global",
  "upperScope": null,
  "variableMap": Object {},
  "variableScope": Object {
    "$ref": 2,
  },
  "variables": Array [],
}
`;

exports[`basics fixtures/do-while-statements.src 1`] = `
Object {
  "$id": 6,
  "block": Object {
    "range": Array [
      0,
      59,
    ],
    "type": "Program",
  },
  "childScopes": Array [
    Object {
      "$id": 5,
      "block": Object {
        "range": Array [
          0,
          59,
        ],
        "type": "Program",
      },
      "childScopes": Array [
        Object {
          "$id": 4,
          "block": Object {
            "range": Array [
              29,
              43,
            ],
            "type": "BlockStatement",
          },
          "childScopes": Array [],
          "functionExpressionScope": false,
          "isStrict": true,
          "references": Array [
            Object {
              "$id": 3,
              "from": Object {
                "$ref": 4,
              },
              "identifier": Object {
                "name": "i",
                "range": Array [
                  34,
                  35,
                ],
                "type": "Identifier",
              },
              "kind": "rw",
              "resolved": Object {
                "$ref": 0,
              },
              "writeExpr": Object {
                "range": Array [
                  39,
                  40,
                ],
                "type": "Literal",
              },
            },
          ],
          "throughReferences": Array [
            Object {
              "$ref": 3,
            },
          ],
          "type": "block",
          "upperScope": Object {
            "$ref": 5,
          },
          "variableMap": Object {},
          "variableScope": Object {
            "$ref": 5,
          },
          "variables": Array [],
        },
      ],
      "functionExpressionScope": false,
      "isStrict": true,
      "references": Array [
        Object {
          "$id": 1,
          "from": Object {
            "$ref": 5,
          },
          "identifier": Object {
            "name": "i",
            "range": Array [
              19,
              20,
            ],
            "type": "Identifier",
          },
          "kind": "w",
          "resolved": Object {
            "$ref": 0,
          },
          "writeExpr": Object {
            "range": Array [
              23,
              24,
            ],
            "type": "Literal",
          },
        },
        Object {
          "$id": 2,
          "from": Object {
            "$ref": 5,
          },
          "identifier": Object {
            "name": "i",
            "range": Array [
              51,
              52,
            ],
            "type": "Identifier",
          },
          "kind": "r",
          "resolved": Object {
            "$ref": 0,
          },
          "writeExpr": undefined,
        },
      ],
      "throughReferences": Array [],
      "type": "module",
      "upperScope": Object {
        "$ref": 6,
      },
      "variableMap": Object {
        "i": Object {
          "$ref": 0,
        },
      },
      "variableScope": Object {
        "$ref": 5,
      },
      "variables": Array [
        Object {
          "$id": 0,
          "defs": Array [
            Object {
              "name": Object {
                "name": "i",
                "range": Array [
                  19,
                  20,
                ],
                "type": "Identifier",
              },
              "node": Object {
                "range": Array [
                  19,
                  24,
                ],
                "type": "VariableDeclarator",
              },
              "parent": Object {
                "range": Array [
                  15,
                  25,
                ],
                "type": "VariableDeclaration",
              },
              "type": "Variable",
            },
          ],
          "eslintUsed": undefined,
          "identifiers": Array [
            Object {
              "name": "i",
              "range": Array [
                19,
                20,
              ],
              "type": "Identifier",
            },
          ],
          "name": "i",
          "references": Array [
            Object {
              "$ref": 1,
            },
            Object {
              "$ref": 3,
            },
            Object {
              "$ref": 2,
            },
          ],
          "scope": Object {
            "$ref": 5,
          },
        },
      ],
    },
  ],
  "functionExpressionScope": false,
  "isStrict": false,
  "references": Array [],
  "throughReferences": Array [],
  "type": "global",
  "upperScope": null,
  "variableMap": Object {},
  "variableScope": Object {
    "$ref": 6,
  },
  "variables": Array [],
}
`;

exports[`basics fixtures/identifiers-double-underscore.src 1`] = `
Object {
  "$id": 9,
  "block": Object {
    "range": Array [
      0,
      60,
    ],
    "type": "Program",
  },
  "childScopes": Array [
    Object {
      "$id": 8,
      "block": Object {
        "range": Array [
          0,
          60,
        ],
        "type": "Program",
      },
      "childScopes": Array [
        Object {
          "$id": 5,
          "block": Object {
            "range": Array [
              20,
              36,
            ],
            "type": "ClassDeclaration",
          },
          "childScopes": Array [],
          "functionExpressionScope": false,
          "isStrict": true,
          "references": Array [],
          "throughReferences": Array [],
          "type": "class",
          "upperScope": Object {
            "$ref": 8,
          },
          "variableMap": Object {
            "__Foo": Object {
              "$ref": 4,
            },
          },
          "variableScope": Object {
            "$ref": 8,
          },
          "variables": Array [
            Object {
              "$id": 4,
              "defs": Array [
                Object {
                  "name": Object {
                    "name": "__Foo",
                    "range": Array [
                      26,
                      31,
                    ],
                    "type": "Identifier",
                  },
                  "node": Object {
                    "range": Array [
                      20,
                      36,
                    ],
                    "type": "ClassDeclaration",
                  },
                  "parent": undefined,
                  "type": "ClassName",
                },
              ],
              "eslintUsed": undefined,
              "identifiers": Array [
                Object {
                  "name": "__Foo",
                  "range": Array [
                    26,
                    31,
                  ],
                  "type": "Identifier",
                },
              ],
              "name": "__Foo",
              "references": Array [],
              "scope": Object {
                "$ref": 5,
              },
            },
          ],
        },
        Object {
          "$id": 7,
          "block": Object {
            "range": Array [
              38,
              59,
            ],
            "type": "FunctionDeclaration",
          },
          "childScopes": Array [],
          "functionExpressionScope": false,
          "isStrict": true,
          "references": Array [],
          "throughReferences": Array [],
          "type": "function",
          "upperScope": Object {
            "$ref": 8,
          },
          "variableMap": Object {
            "arguments": Object {
              "$ref": 6,
            },
          },
          "variableScope": Object {
            "$ref": 7,
          },
          "variables": Array [
            Object {
              "$id": 6,
              "defs": Array [],
              "eslintUsed": undefined,
              "identifiers": Array [],
              "name": "arguments",
              "references": Array [],
              "scope": Object {
                "$ref": 7,
              },
            },
          ],
        },
      ],
      "functionExpressionScope": false,
      "isStrict": true,
      "references": Array [
        Object {
          "$id": 3,
          "from": Object {
            "$ref": 8,
          },
          "identifier": Object {
            "name": "__test",
            "range": Array [
              4,
              10,
            ],
            "type": "Identifier",
          },
          "kind": "w",
          "resolved": Object {
            "$ref": 0,
          },
          "writeExpr": Object {
            "range": Array [
              13,
              17,
            ],
            "type": "Literal",
          },
        },
      ],
      "throughReferences": Array [],
      "type": "module",
      "upperScope": Object {
        "$ref": 9,
      },
      "variableMap": Object {
        "__Bar": Object {
          "$ref": 2,
        },
        "__Foo": Object {
          "$ref": 1,
        },
        "__test": Object {
          "$ref": 0,
        },
      },
      "variableScope": Object {
        "$ref": 8,
      },
      "variables": Array [
        Object {
          "$id": 0,
          "defs": Array [
            Object {
              "name": Object {
                "name": "__test",
                "range": Array [
                  4,
                  10,
                ],
                "type": "Identifier",
              },
              "node": Object {
                "range": Array [
                  4,
                  17,
                ],
                "type": "VariableDeclarator",
              },
              "parent": Object {
                "range": Array [
                  0,
                  18,
                ],
                "type": "VariableDeclaration",
              },
              "type": "Variable",
            },
          ],
          "eslintUsed": undefined,
          "identifiers": Array [
            Object {
              "name": "__test",
              "range": Array [
                4,
                10,
              ],
              "type": "Identifier",
            },
          ],
          "name": "__test",
          "references": Array [
            Object {
              "$ref": 3,
            },
          ],
          "scope": Object {
            "$ref": 8,
          },
        },
        Object {
          "$id": 1,
          "defs": Array [
            Object {
              "name": Object {
                "name": "__Foo",
                "range": Array [
                  26,
                  31,
                ],
                "type": "Identifier",
              },
              "node": Object {
                "range": Array [
                  20,
                  36,
                ],
                "type": "ClassDeclaration",
              },
              "parent": null,
              "type": "ClassName",
            },
          ],
          "eslintUsed": undefined,
          "identifiers": Array [
            Object {
              "name": "__Foo",
              "range": Array [
                26,
                31,
              ],
              "type": "Identifier",
            },
          ],
          "name": "__Foo",
          "references": Array [],
          "scope": Object {
            "$ref": 8,
          },
        },
        Object {
          "$id": 2,
          "defs": Array [
            Object {
              "name": Object {
                "name": "__Bar",
                "range": Array [
                  47,
                  52,
                ],
                "type": "Identifier",
              },
              "node": Object {
                "range": Array [
                  38,
                  59,
                ],
                "type": "FunctionDeclaration",
              },
              "parent": null,
              "type": "FunctionName",
            },
          ],
          "eslintUsed": undefined,
          "identifiers": Array [
            Object {
              "name": "__Bar",
              "range": Array [
                47,
                52,
              ],
              "type": "Identifier",
            },
          ],
          "name": "__Bar",
          "references": Array [],
          "scope": Object {
            "$ref": 8,
          },
        },
      ],
    },
  ],
  "functionExpressionScope": false,
  "isStrict": false,
  "references": Array [],
  "throughReferences": Array [],
  "type": "global",
  "upperScope": null,
  "variableMap": Object {},
  "variableScope": Object {
    "$ref": 9,
  },
  "variables": Array [],
}
`;

exports[`basics fixtures/instanceof.src 1`] = `
Object {
  "$id": 2,
  "block": Object {
    "range": Array [
      0,
      17,
    ],
    "type": "Program",
  },
  "childScopes": Array [
    Object {
      "$id": 1,
      "block": Object {
        "range": Array [
          0,
          17,
        ],
        "type": "Program",
      },
      "childScopes": Array [],
      "functionExpressionScope": false,
      "isStrict": true,
      "references": Array [
        Object {
          "$id": 0,
          "from": Object {
            "$ref": 1,
          },
          "identifier": Object {
            "name": "Set",
            "range": Array [
              14,
              17,
            ],
            "type": "Identifier",
          },
          "kind": "r",
          "resolved": null,
          "writeExpr": undefined,
        },
      ],
      "throughReferences": Array [
        Object {
          "$ref": 0,
        },
      ],
      "type": "module",
      "upperScope": Object {
        "$ref": 2,
      },
      "variableMap": Object {},
      "variableScope": Object {
        "$ref": 1,
      },
      "variables": Array [],
    },
  ],
  "functionExpressionScope": false,
  "isStrict": false,
  "references": Array [],
  "throughReferences": Array [
    Object {
      "$ref": 0,
    },
  ],
  "type": "global",
  "upperScope": null,
  "variableMap": Object {},
  "variableScope": Object {
    "$ref": 2,
  },
  "variables": Array [],
}
`;

exports[`basics fixtures/new-with-member-expression.src 1`] = `
Object {
  "$id": 2,
  "block": Object {
    "range": Array [
      0,
      15,
    ],
    "type": "Program",
  },
  "childScopes": Array [
    Object {
      "$id": 1,
      "block": Object {
        "range": Array [
          0,
          15,
        ],
        "type": "Program",
      },
      "childScopes": Array [],
      "functionExpressionScope": false,
      "isStrict": true,
      "references": Array [
        Object {
          "$id": 0,
          "from": Object {
            "$ref": 1,
          },
          "identifier": Object {
            "name": "foo",
            "range": Array [
              4,
              7,
            ],
            "type": "Identifier",
          },
          "kind": "r",
          "resolved": null,
          "writeExpr": undefined,
        },
      ],
      "throughReferences": Array [
        Object {
          "$ref": 0,
        },
      ],
      "type": "module",
      "upperScope": Object {
        "$ref": 2,
      },
      "variableMap": Object {},
      "variableScope": Object {
        "$ref": 1,
      },
      "variables": Array [],
    },
  ],
  "functionExpressionScope": false,
  "isStrict": false,
  "references": Array [],
  "throughReferences": Array [
    Object {
      "$ref": 0,
    },
  ],
  "type": "global",
  "upperScope": null,
  "variableMap": Object {},
  "variableScope": Object {
    "$ref": 2,
  },
  "variables": Array [],
}
`;

exports[`basics fixtures/new-without-parens.src 1`] = `
Object {
  "$id": 5,
  "block": Object {
    "range": Array [
      0,
      23,
    ],
    "type": "Program",
  },
  "childScopes": Array [
    Object {
      "$id": 4,
      "block": Object {
        "range": Array [
          0,
          23,
        ],
        "type": "Program",
      },
      "childScopes": Array [
        Object {
          "$id": 3,
          "block": Object {
            "range": Array [
              0,
              16,
            ],
            "type": "FunctionDeclaration",
          },
          "childScopes": Array [],
          "functionExpressionScope": false,
          "isStrict": true,
          "references": Array [],
          "throughReferences": Array [],
          "type": "function",
          "upperScope": Object {
            "$ref": 4,
          },
          "variableMap": Object {
            "arguments": Object {
              "$ref": 2,
            },
          },
          "variableScope": Object {
            "$ref": 3,
          },
          "variables": Array [
            Object {
              "$id": 2,
              "defs": Array [],
              "eslintUsed": undefined,
              "identifiers": Array [],
              "name": "arguments",
              "references": Array [],
              "scope": Object {
                "$ref": 3,
              },
            },
          ],
        },
      ],
      "functionExpressionScope": false,
      "isStrict": true,
      "references": Array [
        Object {
          "$id": 1,
          "from": Object {
            "$ref": 4,
          },
          "identifier": Object {
            "name": "X",
            "range": Array [
              21,
              22,
            ],
            "type": "Identifier",
          },
          "kind": "r",
          "resolved": Object {
            "$ref": 0,
          },
          "writeExpr": undefined,
        },
      ],
      "throughReferences": Array [],
      "type": "module",
      "upperScope": Object {
        "$ref": 5,
      },
      "variableMap": Object {
        "X": Object {
          "$ref": 0,
        },
      },
      "variableScope": Object {
        "$ref": 4,
      },
      "variables": Array [
        Object {
          "$id": 0,
          "defs": Array [
            Object {
              "name": Object {
                "name": "X",
                "range": Array [
                  9,
                  10,
                ],
                "type": "Identifier",
              },
              "node": Object {
                "range": Array [
                  0,
                  16,
                ],
                "type": "FunctionDeclaration",
              },
              "parent": null,
              "type": "FunctionName",
            },
          ],
          "eslintUsed": undefined,
          "identifiers": Array [
            Object {
              "name": "X",
              "range": Array [
                9,
                10,
              ],
              "type": "Identifier",
            },
          ],
          "name": "X",
          "references": Array [
            Object {
              "$ref": 1,
            },
          ],
          "scope": Object {
            "$ref": 4,
          },
        },
      ],
    },
  ],
  "functionExpressionScope": false,
  "isStrict": false,
  "references": Array [],
  "throughReferences": Array [],
  "type": "global",
  "upperScope": null,
  "variableMap": Object {},
  "variableScope": Object {
    "$ref": 5,
  },
  "variables": Array [],
}
`;

exports[`basics fixtures/typeof-expression.src 1`] = `
Object {
  "$id": 1,
  "block": Object {
    "range": Array [
      0,
      13,
    ],
    "type": "Program",
  },
  "childScopes": Array [
    Object {
      "$id": 0,
      "block": Object {
        "range": Array [
          0,
          13,
        ],
        "type": "Program",
      },
      "childScopes": Array [],
      "functionExpressionScope": false,
      "isStrict": true,
      "references": Array [],
      "throughReferences": Array [],
      "type": "module",
      "upperScope": Object {
        "$ref": 1,
      },
      "variableMap": Object {},
      "variableScope": Object {
        "$ref": 0,
      },
      "variables": Array [],
    },
  ],
  "functionExpressionScope": false,
  "isStrict": false,
  "references": Array [],
  "throughReferences": Array [],
  "type": "global",
  "upperScope": null,
  "variableMap": Object {},
  "variableScope": Object {
    "$ref": 1,
  },
  "variables": Array [],
}
`;

exports[`basics fixtures/update-expression.src 1`] = `
Object {
  "$id": 8,
  "block": Object {
    "range": Array [
      0,
      39,
    ],
    "type": "Program",
  },
  "childScopes": Array [
    Object {
      "$id": 7,
      "block": Object {
        "range": Array [
          0,
          39,
        ],
        "type": "Program",
      },
      "childScopes": Array [
        Object {
          "$id": 6,
          "block": Object {
            "range": Array [
              11,
              34,
            ],
            "type": "FunctionDeclaration",
          },
          "childScopes": Array [],
          "functionExpressionScope": false,
          "isStrict": true,
          "references": Array [
            Object {
              "$id": 5,
              "from": Object {
                "$ref": 6,
              },
              "identifier": Object {
                "name": "i",
                "range": Array [
                  28,
                  29,
                ],
                "type": "Identifier",
              },
              "kind": "rw",
              "resolved": Object {
                "$ref": 0,
              },
              "writeExpr": null,
            },
          ],
          "throughReferences": Array [
            Object {
              "$ref": 5,
            },
          ],
          "type": "function",
          "upperScope": Object {
            "$ref": 7,
          },
          "variableMap": Object {
            "arguments": Object {
              "$ref": 4,
            },
          },
          "variableScope": Object {
            "$ref": 6,
          },
          "variables": Array [
            Object {
              "$id": 4,
              "defs": Array [],
              "eslintUsed": undefined,
              "identifiers": Array [],
              "name": "arguments",
              "references": Array [],
              "scope": Object {
                "$ref": 6,
              },
            },
          ],
        },
      ],
      "functionExpressionScope": false,
      "isStrict": true,
      "references": Array [
        Object {
          "$id": 2,
          "from": Object {
            "$ref": 7,
          },
          "identifier": Object {
            "name": "i",
            "range": Array [
              4,
              5,
            ],
            "type": "Identifier",
          },
          "kind": "w",
          "resolved": Object {
            "$ref": 0,
          },
          "writeExpr": Object {
            "range": Array [
              8,
              9,
            ],
            "type": "Literal",
          },
        },
        Object {
          "$id": 3,
          "from": Object {
            "$ref": 7,
          },
          "identifier": Object {
            "name": "f",
            "range": Array [
              35,
              36,
            ],
            "type": "Identifier",
          },
          "kind": "r",
          "resolved": Object {
            "$ref": 1,
          },
          "writeExpr": undefined,
        },
      ],
      "throughReferences": Array [],
      "type": "module",
      "upperScope": Object {
        "$ref": 8,
      },
      "variableMap": Object {
        "f": Object {
          "$ref": 1,
        },
        "i": Object {
          "$ref": 0,
        },
      },
      "variableScope": Object {
        "$ref": 7,
      },
      "variables": Array [
        Object {
          "$id": 0,
          "defs": Array [
            Object {
              "name": Object {
                "name": "i",
                "range": Array [
                  4,
                  5,
                ],
                "type": "Identifier",
              },
              "node": Object {
                "range": Array [
                  4,
                  9,
                ],
                "type": "VariableDeclarator",
              },
              "parent": Object {
                "range": Array [
                  0,
                  10,
                ],
                "type": "VariableDeclaration",
              },
              "type": "Variable",
            },
          ],
          "eslintUsed": undefined,
          "identifiers": Array [
            Object {
              "name": "i",
              "range": Array [
                4,
                5,
              ],
              "type": "Identifier",
            },
          ],
          "name": "i",
          "references": Array [
            Object {
              "$ref": 2,
            },
            Object {
              "$ref": 5,
            },
          ],
          "scope": Object {
            "$ref": 7,
          },
        },
        Object {
          "$id": 1,
          "defs": Array [
            Object {
              "name": Object {
                "name": "f",
                "range": Array [
                  20,
                  21,
                ],
                "type": "Identifier",
              },
              "node": Object {
                "range": Array [
                  11,
                  34,
                ],
                "type": "FunctionDeclaration",
              },
              "parent": null,
              "type": "FunctionName",
            },
          ],
          "eslintUsed": undefined,
          "identifiers": Array [
            Object {
              "name": "f",
              "range": Array [
                20,
                21,
              ],
              "type": "Identifier",
            },
          ],
          "name": "f",
          "references": Array [
            Object {
              "$ref": 3,
            },
          ],
          "scope": Object {
            "$ref": 7,
          },
        },
      ],
    },
  ],
  "functionExpressionScope": false,
  "isStrict": false,
  "references": Array [],
  "throughReferences": Array [],
  "type": "global",
  "upperScope": null,
  "variableMap": Object {},
  "variableScope": Object {
    "$ref": 8,
  },
  "variables": Array [],
}
`;

exports[`basics fixtures/void-expression.src 1`] = `
Object {
  "$id": 1,
  "block": Object {
    "range": Array [
      0,
      17,
    ],
    "type": "Program",
  },
  "childScopes": Array [
    Object {
      "$id": 0,
      "block": Object {
        "range": Array [
          0,
          17,
        ],
        "type": "Program",
      },
      "childScopes": Array [],
      "functionExpressionScope": false,
      "isStrict": true,
      "references": Array [],
      "throughReferences": Array [],
      "type": "module",
      "upperScope": Object {
        "$ref": 1,
      },
      "variableMap": Object {},
      "variableScope": Object {
        "$ref": 0,
      },
      "variables": Array [],
    },
  ],
  "functionExpressionScope": false,
  "isStrict": false,
  "references": Array [],
  "throughReferences": Array [],
  "type": "global",
  "upperScope": null,
  "variableMap": Object {},
  "variableScope": Object {
    "$ref": 1,
  },
  "variables": Array [],
}
`;
